# product_test

./: .env_test  .gitignore  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
Product/: middleware.py  settings.py  urls.py
apps/products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/products/services/: products.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
apps/users/services/: users.py
